tests/e2e/semantics/output_assignment_existing_var4.error
Error: syntax error in story at line 2, column 16

2|    http server as x
                     ^

E0108: Service output `x` must be unique. Use `as outputName`
