tests/e2e/semantics/output_assignment_existing_var4.story
x = 1
http server as x
    a = 1
